--- a/Catalog.Api/Catalog.Api.csproj
+++ b/Catalog.Api/Catalog.Api.csproj
@@ -9,13 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Repositories\43s4jdbv.fhr~" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
