--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,5 +4,17 @@ services:
   catalog.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings__ConnectionString=mongodb://catalogdb:27017"
     ports:
-      - "80"
+      - "8000:80"
+    depends_on:
+      - "catalogdb"
+    container_name: "catalog.api"
+
+
+  catalogdb:
+    container_name: "catalogdb"
+    ports:
+     - "27017:27017"
+    volumes:
+     - "mongo_data:/data/db"
