--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -18,3 +18,9 @@ services:
      - "27017:27017"
     volumes:
      - "mongo_data:/data/db"
+  basket.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
+
