--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,11 @@ services:
   catalogdb:
     image: mongo
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Basket.Api/Dockerfile
+
 volumes:
   mongo_data:
