--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -18,9 +18,18 @@ services:
      - "27017:27017"
     volumes:
      - "mongo_data:/data/db"
+ 
   basket.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings__ConnectionString=basketdb:6379"
     ports:
-      - "80"
-
+      - "8001:80"
+    container_name: "basket.api"
+    depends_on:
+    - "basketdb"
+ 
+  basketdb:
+    container_name: "basketdb"
+    ports:
+     - "6379:6379" 
