--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,12 @@ services:
   basketdb:
     image: redis:alpine
 
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: Ordering.Api/Dockerfile
+
 volumes:
   mongo_data:
+
