--- a/Basket.Api/Basket.Api.csproj
+++ b/Basket.Api/Basket.Api.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
     <PackageReference Include="MassTransit" Version="8.0.6" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.6" />
@@ -26,6 +27,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EventBusMessages\EventBusMessages.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\Existence.Grpc\Protos\existence.proto" GrpcServices="Client">
+      <Link>Protos\existence.proto</Link>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
