--- a/Basket.Api/appsettings.json
+++ b/Basket.Api/appsettings.json
@@ -5,6 +5,9 @@
   "EventBusSettings": {
     "HostAddress": "amqp://guest:guest@localhost:5672"
   },
+  "GrpcSettings": {
+    "HostAddress": "http://localhost:5003"
+  },
 
   "Logging": {
     "LogLevel": {
