--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -24,11 +24,14 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings__ConnectionString=basketdb:6379"
       - "EventBusSettings__HostAddress=amqp://guest:guest@rabbitmq:5672"
+      - "GrpcSettings__HostAddress=http://existence.grpc:80"
     ports:
       - "8001:80"
     container_name: "basket.api"
     depends_on:
     - "basketdb"
+    - "existence.grpc"
+    - "rabbitmq"
  
   basketdb:
     container_name: "basketdb"
@@ -58,3 +61,14 @@ services:
    ports:
     - "5672:5672"
     - "15672:15672"
+  
+    
+  existence.grpc:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+    ports:
+      - "80"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
